Update 'heyo971px-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:244f03488dff73d2b95b7ad7b051804f979540ac@sha256:ffec152db22e88647e3028be3c13fcc67e517b49847b7e3deb51963dbc769e2c

--- a/components/heyo971px-go/overlays/development/deployment-patch.yaml
+++ b/components/heyo971px-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: heyo971px-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:244f03488dff73d2b95b7ad7b051804f979540ac@sha256:ffec152db22e88647e3028be3c13fcc67e517b49847b7e3deb51963dbc769e2c
+          name: container-image
